# web_dev

./: .gitignore  README.md  index.php
CSS-2015-documents-sources-STUDENTS/: .ch2-lesson-5-10.html.swp  .structure.css.swp
beginners_python3_source/: 07. variables.py  12. drawing-with-python.py  15. loops-and-range.py  16. loops-drawing-with-python.py  19. loops-drawing-with-python-with-color.py  20. loops-drawing-with-python-with-color.py  29. whileLoops.py  30. whileLoops.py  34-simpleGameOne.py  36. argument parameters global vs local scope.py  38. multiparameter and elif.py  43. treasure_hunt_game.py  44. treasure_hunt_game - main_loop.py  46. Object Oriented Python - class to object.py  48. python gui with tkinter basic window.py  50-53. MyDoctor.py  56. OO inheritance Overriding Methods.py  58. OO inheritance REFERENCE.py  Creating files Windows.py  basicDrawing.py  dataTypes.py  strings and numbers.py  strings.py  while loop with increment.py
chatGPT/: CreateWebsites.docx  chatgpt_html.html
crud_with_php_and_mysqli/: connect_db.php  view.php
form_validation_php_js/: contact.php  form.php  index.php
my_website_v1/: index.html
my_website_v1/2022_cpp_dev/: CMakeLists.txt  DataRouter.cc  DataRouter.h  MDInterface.cc  MDInterface.h  MPLSInterface.cc  MPLSInterface.h  MsgTypes.h  SOKFInterface.cc  SOKFInterface.h  VMWInterface.cc  VMWInterface.h  VMWMessageBuilder.cc  VMWMessageBuilder.h  VMWMessageParser.cc  VMWMessageParser.h  VMWMessageTypes.h  VMWUplinkMessage.h  main.cc
php_and_mysql/: ch_1_3.txt  connecting_to_mysql_with_php.php
(+88 files in other folders)
